<resources>
    //TestAds
<!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    //RealAds
    <string name="app_id">ca-app-pub-6480664593997158~9028361442</string>


    <string name="app_name">Wifi Analyzer</string>
    <string name="ad_attribution">add</string>
    <string name="textview_date">Select Date</string>
    <string name="titttle">title</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="dateformate">dd/MM/yyyy</string>
    <string name="Not_Set_Alert">Not Set</string>
    <string name="third">Dear User, Thank you for choosing us. In developing this app we have made sure that we do not violate any privacy. However, this app will require few permissions to provide you the best quality:</string>
    <string name="share_using">Wifi Master 2020</string>
    <string name="kk1">The permission of location is needed to access nearby Wifi connection</string>
    <string name="kk2">Camera permission is required to scan nifi network by scanning the bar code of wifi network</string>
    <string name="k2">Storage permission is required to saved generated QR code of wifi network.</string>
    <string name="kk3">This permission is used to check wifi speed</string>
    <string name="todo">TODO</string>
    <string name="unable_to_open">Unable to Open Data Usage screen!!</string>
    <string name="textview">TextView</string>
    <string name="ping">Ping</string>
    <string name="level">Level</string>
    <string name="wifi_speed">Wifi Speed</string>
    <string name="signal_frequency">Signal Frequency</string>
    <string name="dhcp_information">DHCP Information</string>
    <string name="dns_1">DNS 1</string>
    <string name="dns_2">DNS 2</string>
    <string name="default_gateway">Default Gateway</string>
    <string name="ip_address">IP Address</string>
    <string name="lease_time">Lease Time</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="server_ip">Server IP</string>
    <string name="generated_qr_list_is_empty">Generated Qr list is empty</string>
    <string name="system_overlay_android_6">SYSTEM_OVERLAY: Since android 6 and above this permission is needed to show wifi connectivity dialog when the app is background.</string>
    <string name="file_deleted">File Deleted!!</string>
    <string name="file_delete_failed">Failed to delete file</string>
    <string name="select_photo_to_delete">\" Select a Photo To Delete\"</string>
    <string name="select_photo_to_share">\"Please select Photo To Share \"</string>
    <string name="allow_location_permission">Allow Location Permission to continue!!</string>
    <string name="unable_to_open_hotspot">Unable to Open Hotspot settings screen!!</string>
    <string name="unknown_ssid"><![CDATA[<unknown ssid>]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="des_hotspot"> <b> Note:</b> \n\nTo Set the hotspot name and password please go to your device settings.To switch on/off the private hotspot mode. In the hotspot mode Wifi connection is disabled and internet connection via 3G/4G/LTE is required.</string>
    <string name="automatic_wifi_settings">Automatic Wifi Settings</string>
    <string name="turn_on_wifi_after_30_minutes">Turn on wifi after 30 minutes</string>
    <string name="turn_on_wifi_after_5_minutes">Turn on wifi after 5 minutes</string>
    <string name="turn_on_wifi_after_1_hour">Turn on wifi after 1 hour</string>
    <string name="turn_off_after_5_minutes">Turn off after 5 minutes</string>
    <string name="ad_is_loading">Ad is Loading</string>
    <string name="you_don_t_set_any_auto_wifi_now">You Don\'t set any Auto wifi now.</string>
    <string name="total_data_usage">Total Data Usage:</string>
    <string name="select_password_type">Select Password Type</string>
    <string name="generate_password">Generate Password</string>
    <string name="welcome_to_our_wifi_nanalyzer_app">Welcome to our WiFi \nAnalyzer App!</string>
    <string name="welcome_descrip">Let\'s optimize your network performance and troubleshoot connection issues effortlessly.</string>
    <string name="get_start">Get Start</string>
    <string name="hotspot_info">Hotspot Info</string>
    <string name="wifi_analyzer">WIFI Analyzer</string>
    <string name="connected">Connected</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="available_wifi_connections">Available Wifi Connections</string>
    <string name="sorry_there_is_no_free_wifi_in_your_area">Sorry there is no Free Wifi in your Area</string>
    <string name="set_specific_time">Set Specific Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="speed">Speed</string>
    <string name="type">Type</string>
    <string name="signals">Signals</string>
    <string name="strength">Strength</string>
    <string name="this_action_can_contain_ad">This action can contain ad</string>
    <string name="wifi_information">WIFI Information</string>
    <string name="available_wifi_networks">Available Wifi Networks</string>
    <string name="saved_connected_devices">Saved Connected Devices</string>
    <string name="show_wifi_password">Show Wifi Password</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_test_speed">Wifi Test Speed</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="start_speed_test">Start Speed Test</string>
    <string name="speed_test_history">Speed Test History</string>
    <string name="enter_valid_password">Enter Valid password</string>
    <string name="connect">Connect</string>
    <string name="generate_qr">Generate QR</string>
    <string name="go_settings">Go Settings</string>
    <string name="_1_press_generate_button_to_show_password">1. Press Generate Button to show Password.</string>
    <string name="_2_tap_on_generate_password_to_copy">2. Tap on Generate Password to Copy.</string>
    <string name="got_it">Got it</string>
    <string name="display_qr_code">Display QR Code</string>
    <string name="click_on_button_to_get_the_decrypted_wifi_password">Click on button to get the decrypted wifi password</string>
    <string name="decrypt">Decrypt</string>
    <string name="saved_qr_passwords">Saved QR Passwords</string>
    <string name="scan_qr_from_your_partner_cell_phone_to_get_wifi_password">Scan Qr From your partner Cell phone to get wifi password</string>
    <string name="your_password">Your Password</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="permissions">Permissions</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="internet">Internet</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="_1_click_on_image_to_scan_the_generated_qr_password_or_decrypt">1. Click on image to scan the generated Qr password or Decrypt.</string>
    <string name="_2_click_qr_scanner_to_scan_the_generated_qr">2. Click Qr Scanner to scan the generated Qr.</string>
    <string name="hotspot_on">HotSpot is On</string>
    <string name="hot_spot_off">HotSpot is Off</string>
    <string name="connection_not_available">Sorry! Connection is not freely available</string>
    <string name="connect_free_wifi">Connecting to Free Wifi</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="connect_wifi_first">Please first connect to Wifi Network!!</string>
    <string name="no_wifi_connected">No Wifi Connected</string>
    <string name="genrated_pass">Generated Password</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="password_saved">Your Password has been saved!</string>
    <string name="allow_storage_permission">Allow Storage Permissions</string>
    <string name="not_connected">Not connected</string>
    <string name="pass_saved">Your Password has been saved!</string>
    <string name="wifi_info">Wifi Info</string>
    <string name="wifi_speed_test">Wifi Test Speed</string>
    <string name="data_usage">Data Usage</string>
    <string name="wifi_automation">Wifi Automation</string>
    <string name="pass_generator">Password Generator</string>
    <string name="wifi_scan">Wifi Scan</string>
    <string name="hotspot">Hotspot</string>
    <string name="show_wifi_pass">Show Wifi Password</string>
    <string name="my_wifi">My Wifi</string>
    <string name="allow_both_camera_storage_permission">Please allow both Camera and Storage Permission to continue</string>
    <string name="alarm_set">Alarm has Set</string>
    <string name="please_wait_loading_ads_text">Please Wait Loading Ads</string>
</resources>
