<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wifi_setting_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ibm_font"
        android:text="@string/speed_test_history"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12"
        app:layout_constraintTop_toBottomOf="@id/image"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:text="@string/speed"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:text="@string/type"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:text="@string/signals"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="2"
            android:text="@string/strength"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>