<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            >

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/terms_conditions"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/ibm_font"
                android:layout_marginTop="@dimen/_20sdp"
                />


            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t1"
                android:layout_gravity="center"
                android:text="@string/third"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/t1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/permissions"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/t2"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/ibm_font"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/t3"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/shape_terms"
                android:elevation="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/mylocatiobn"
                        app:tint="@android:color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:fontFamily="@font/ibm_font"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kk1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/ibm_font"
                    android:layout_marginTop="@dimen/_2sdp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/mycam"
                        app:tint="@android:color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:fontFamily="@font/ibm_font"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kk2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/ibm_font"
                    android:layout_marginTop="@dimen/_2sdp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ui"
                        app:tint="@android:color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/storage"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:fontFamily="@font/ibm_font"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/k2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/ibm_font"
                    android:layout_marginTop="@dimen/_2sdp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/internet"
                        app:tint="@android:color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/internet"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:fontFamily="@font/ibm_font"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_gravity="center"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kk3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/ibm_font"
                    android:layout_marginTop="@dimen/_2sdp"
                    />


            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Decline"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/new_blue"
                android:fontFamily="@font/ibm_font"
                android:textAllCaps="false"
                android:text="@string/decline"
                android:textStyle="bold"
                android:background="@drawable/shape_get_start"
                app:layout_constraintEnd_toStartOf="@+id/accept"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accept"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/new_blue"
                android:fontFamily="@font/ibm_font"
                android:textAllCaps="false"
                android:text="@string/accept"
                android:textStyle="bold"
                android:background="@drawable/shape_get_start"
                app:layout_constraintStart_toEndOf="@+id/Decline"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>