<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_10sdp"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        >
        <TextView
            android:id="@+id/txtBarcodeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_press_generate_button_to_show_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/ibm_font"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_tap_on_generate_password_to_copy"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/ibm_font"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/ok"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/animation_view"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView

                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/got_it"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>














