<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    tools:context="wifi.key.show.master.show.all.wifi.password.Activities.WifiScanActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        >
        <TextView
            android:id="@+id/textSSID1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/textPassword_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textSSID1"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:hint="@string/your_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPassword_one"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_speed"
                android:gravity="center"
                android:text="@string/copy"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toStartOf="@+id/share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/shape_button_speed"
                android:gravity="center"
                android:text="@string/share"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toStartOf="@+id/save"
                app:layout_constraintStart_toEndOf="@+id/copy"
                app:layout_constraintTop_toTopOf="parent"

                />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_speed"
                android:gravity="center"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/share"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>