<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_10sdp"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        >
        <TextView
            android:id="@+id/txtBarcodeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_overlay_android_6"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/ibm_font"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/but_setting"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/morpic_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:fontFamily="@font/ibm_font"
                android:textAllCaps="false"
                android:text="@string/go_settings"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="bold"
                android:background="@drawable/shape_button_speed"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/but_dismiss"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/morpic_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:fontFamily="@font/ibm_font"
                android:textAllCaps="false"
                android:text="@string/decline"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/shape_button_speed"
                />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>














